# cs-utils

./: .gitignore  pyproject.toml
examples/: test_ai_chat.py
scripts/: hex_2_rgb.py
src/cs/: ai.py  audio.py  cv.py  file.py  flet.py  git.py  time.py
src/cs_utils/: json.py  yaml.py
src/utils/: __init__.py  ai.py  ai_chat.py  auto.py  color.py  cv.py  file.py  git.py  img.py  json.py  logger.py  my_types.py  video.py
tests/: test_auto.py  test_git.py  test_json.py  test_yaml.py
