[project]
name = "cs"
version = "0.0.2"
description = "Python utils for everything"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython",
    "opencv-python",
    "matplotlib",
    "pyyaml",
    "psutil",
    "shapely",
    "sqlmodel",
]

# [project.urls]
# "Homepage" = "https://example.com"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cs"]
package-dir = { "cs" = "src/cs" }
include-package-data = true

# [tool.setuptools.package-dir]
# ui = "cs_ui"
